// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`persisted state snapshot > recent posts store shape 1`] = `
[
  {
    "accountUuid": undefined,
    "apId": "https://blorpblorp.xyz/post/1",
    "community": {
      "apId": "https://blorpblorp.xyz/c/0",
      "banner": "https://picsum.photos/id/11/800/200",
      "commentCount": 1324,
      "createdAt": "2025-01-30T12:00:00.000000+00:00",
      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
      "handle": "0@blorpblorp.xyz",
      "icon": "https://picsum.photos/id/12/200/200",
      "id": 0,
      "nsfw": false,
      "postCount": 753,
      "subscribed": "NotSubscribed",
      "subscriberCount": 562,
      "subscribersLocalCount": 432,
      "usersActiveDayCount": 34,
      "usersActiveHalfYearCount": 426,
      "usersActiveMonthCount": 235,
      "usersActiveWeekCount": 73,
    },
    "creator": {
      "apId": "https://blorpblorp.xyz/u/0",
      "avatar": null,
      "bio": "This is me",
      "commentCount": 2000,
      "createdAt": "2025-01-30T11:00:00.000000Z",
      "deleted": false,
      "handle": "0@blorpblorp.xyz",
      "id": 0,
      "isBanned": false,
      "isBot": false,
      "matrixUserId": null,
      "postCount": 100,
    },
    "post": {
      "altText": null,
      "apId": "https://blorpblorp.xyz/post/1",
      "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
      "commentsCount": 4,
      "communityApId": "https://blorpblorp.xyz/c/0",
      "communityHandle": "0@blorpblorp.xyz",
      "createdAt": "2025-01-30T11:00:00.000000Z",
      "creatorApId": "https://blorpblorp.xyz/u/0",
      "creatorHandle": "0@blorpblorp.xyz",
      "creatorId": 0,
      "crossPosts": [],
      "deleted": false,
      "downvotes": 2,
      "embedVideoUrl": null,
      "emojiReactions": [],
      "featuredCommunity": false,
      "featuredLocal": false,
      "flairs": [],
      "id": 1,
      "isBannedFromCommunity": false,
      "locked": false,
      "nsfw": false,
      "read": false,
      "removed": false,
      "saved": false,
      "thumbnailAspectRatio": null,
      "thumbnailUrl": null,
      "title": "This is a test post",
      "upvotes": 10,
      "url": null,
      "urlContentType": null,
    },
  },
]
`;

exports[`persisted state snapshot > recent posts store shape 2`] = `
{
  "recentlyVisited": [
    {
      "accountUuid": undefined,
      "apId": "https://blorpblorp.xyz/post/1",
      "community": {
        "apId": "https://blorpblorp.xyz/c/0",
        "banner": "https://picsum.photos/id/11/800/200",
        "commentCount": 1324,
        "createdAt": "2025-01-30T12:00:00.000000+00:00",
        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
        "handle": "0@blorpblorp.xyz",
        "icon": "https://picsum.photos/id/12/200/200",
        "id": 0,
        "nsfw": false,
        "postCount": 753,
        "subscribed": "NotSubscribed",
        "subscriberCount": 562,
        "subscribersLocalCount": 432,
        "usersActiveDayCount": 34,
        "usersActiveHalfYearCount": 426,
        "usersActiveMonthCount": 235,
        "usersActiveWeekCount": 73,
      },
      "creator": {
        "apId": "https://blorpblorp.xyz/u/0",
        "avatar": null,
        "bio": "This is me",
        "commentCount": 2000,
        "createdAt": "2025-01-30T11:00:00.000000Z",
        "deleted": false,
        "handle": "0@blorpblorp.xyz",
        "id": 0,
        "isBanned": false,
        "isBot": false,
        "matrixUserId": null,
        "postCount": 100,
      },
      "post": {
        "altText": null,
        "apId": "https://blorpblorp.xyz/post/1",
        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
        "commentsCount": 4,
        "communityApId": "https://blorpblorp.xyz/c/0",
        "communityHandle": "0@blorpblorp.xyz",
        "createdAt": "2025-01-30T11:00:00.000000Z",
        "creatorApId": "https://blorpblorp.xyz/u/0",
        "creatorHandle": "0@blorpblorp.xyz",
        "creatorId": 0,
        "crossPosts": [],
        "deleted": false,
        "downvotes": 2,
        "embedVideoUrl": null,
        "emojiReactions": [],
        "featuredCommunity": false,
        "featuredLocal": false,
        "flairs": [],
        "id": 1,
        "isBannedFromCommunity": false,
        "locked": false,
        "nsfw": false,
        "read": false,
        "removed": false,
        "saved": false,
        "thumbnailAspectRatio": null,
        "thumbnailUrl": null,
        "title": "This is a test post",
        "upvotes": 10,
        "url": null,
        "urlContentType": null,
      },
    },
  ],
}
`;
